Añadida conclusión de la distribución de popularidad y posibilidad de explorar si la distribución de cola larga se mantiene a lo largo de distintas categorías

--- a/src/2_Analisis/Analisis_distribucion_popularidad.ipynb
+++ b/src/2_Analisis/Analisis_distribucion_popularidad.ipynb
@@ -1561,6 +1561,30 @@
    "source": [
     "print(f\"Número de juegos con menos de 10 reseñas en el primer mes: {df[df[\"total\"] < 50].shape[0]}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4110945f",
+   "metadata": {},
+   "source": [
+    "Conclusiones:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89641cd4",
+   "metadata": {},
+   "source": [
+    "Se aprecia que la distribución era la que esperábamos, una de cola larga con gran concentración de juegos alrededorde números de reseñas bajos y solo unos pocos con muchas reseñas. Además parece que la distribución se mantiene en las distintas categorías (los juegos gratuitos presentan la misma distribución que los no gratuitos)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a2ad495",
+   "metadata": {},
+   "source": [
+    "Se puede comprobar si la distribución se mantiene a lo largo de distintas categorías diferentes. -> COMPLETAR"
+   ]
   }
  ],
  "metadata": {
