--- a/src/2_Analisis/Analisis_distribucion_popularidad.ipynb
+++ b/src/2_Analisis/Analisis_distribucion_popularidad.ipynb
@@ -24,6 +24,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import seaborn as sns\n",
     "import json\n",
     "import gzip\n",
     "import matplotlib.pyplot as plt\n",
@@ -36,7 +37,7 @@
    "id": "dfa03757",
    "metadata": {},
    "source": [
-    "#### Creación del dataset:\n",
+    "## Carga de datos a DataFrame:\n",
     "Es necesario leer el json y crear un dataset a patir de la lista asociada a la clave `data`."
    ]
   },
@@ -67,23 +68,84 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bec4084",
+   "id": "8de364d9",
    "metadata": {},
    "source": [
-    "#### Modificación del dataframe:\n",
-    "Creación de columnas `free` que sirve para separar las distribuciones de los juegos gratuitos de los no gratuitos"
+    "## Procesado del DataFrame"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a351b348",
+   "metadata": {},
+   "source": [
+    "Se crea una columna nueva del dataframe por cada clave dentro de `appdetails`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "8b9540d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.join(df[\"appdetails\"].apply(pd.Series))\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e0a86b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_name(x):\n",
+    "    if isinstance(x,dict):\n",
+    "        return x.get(\"name\")\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "def get_genres(x):\n",
+    "    if not isinstance(x, dict):\n",
+    "        return []\n",
+    "    genres = x.get('genres', [])\n",
+    "    if not isinstance(genres, list):\n",
+    "        return []\n",
+    "    return [g.get('description') for g in genres if isinstance(g, dict)]\n",
+    "\n",
+    "def get_categories(x):\n",
+    "    if not isinstance(x,dict):\n",
+    "        return []\n",
+    "    categories = x.get(\"categories\", [])\n",
+    "    if not isinstance(categories, list):\n",
+    "        return []\n",
+    "    return [c.get(\"description\") for c in categories if isinstance(c, dict)]\n",
+    "\n",
+    "def is_free(x):\n",
+    "    if not isinstance(x,dict):\n",
+    "        return []\n",
+    "    price_ov = x.get(\"price_overview\", [])\n",
+    "    if not isinstance(price_ov, dict):\n",
+    "        return []\n",
+    "    return price_ov.get(\"initial\") == 0\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e064d358",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"name\"] = df[\"appdetails\"].apply(lambda x : x.get(\"name\") if isinstance(x,dict) else None)\n",
-    "df[\"free\"] = df[\"appdetails\"].apply(lambda x: True if x.get(\"price_overview\").get(\"initial\") == 0 else False)\n",
-    "df.drop(columns=[\"appdetails\"], inplace=True)"
+    "df[\"name\"] = df[\"appdetails\"].apply(lambda x : get_name(x))\n",
+    "df[\"free\"] = df[\"appdetails\"].apply(lambda x: is_free(x))\n",
+    "df[\"categories\"] = df[\"appdetails\"].apply(lambda x: get_categories(x))\n",
+    "df[\"genres\"] = df[\"appdetails\"].apply(lambda x: get_genres(x))\n",
+    "df.drop(columns=[\"appdetails\"], inplace=True,errors=\"ignore\")\n",
+    "\n",
+    "df\n"
    ]
   },
   {
@@ -96,14 +158,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c4b639d3",
    "metadata": {},
    "outputs": [],
    "source": [
     "df[\"recomendaciones_positivas\"] = df[\"appreviewhistogram\"].apply(lambda x: x.get(\"rollups\").get(\"recommendations_up\") if isinstance(x, dict) & isinstance(x.get(\"rollups\"), dict) else None)\n",
     "df[\"recomendaciones_negativas\"] = df[\"appreviewhistogram\"].apply(lambda x: x.get(\"rollups\").get(\"recommendations_down\") if isinstance(x, dict) & isinstance(x.get(\"rollups\"), dict) else None)\n",
-    "df.dropna(inplace=True)"
+    "df.drop(columns=[\"appreviewhistogram\"], inplace = True, errors=\"ignore\")\n",
+    "\n",
+    "df.dropna(subset=[\"recomendaciones_positivas\",\"recomendaciones_negativas\"],inplace = True)"
    ]
   },
   {
@@ -147,6 +211,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ad10541b",
+   "metadata": {},
+   "source": [
+    "## Gráficos + Conclusiones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61656249",
+   "metadata": {},
+   "source": [
+    "#### Histograma de la distribución de la popularidad"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "50366f65",
@@ -158,7 +238,16 @@
     "plt.xlabel(\"Numero de reseñas\")\n",
     "plt.ylabel(\"Número de juegos (log)\")\n",
     "plt.title(\"Distribución de popularidad (número de reseñas en el primer mes)\")\n",
+    "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fd6033d",
+   "metadata": {},
+   "source": [
+    "#### Histogramas divididos entre juegos gratuitos y no gratuitos"
    ]
   },
   {
@@ -182,7 +271,117 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Número de juegos con menos de 10 reseñas en el primer mes: {df[df[\"total\"] < 50].shape[0]}\")"
+    "print(f\"Número de juegos con menos de 50 reseñas en el primer mes: {df[df[\"total\"] < 50].shape[0]}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "343592a9",
+   "metadata": {},
+   "source": [
+    "#### Análisis para las distintas categorías"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03cd447d",
+   "metadata": {},
+   "source": [
+    "##### Boxplot del número de reseñas para distintos géneros (los más populares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceb10d2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_exp = df.explode(\"genres\")\n",
+    "\n",
+    "# Se toman los 10 géneros más populares\n",
+    "top_genres = df_exp[\"genres\"].value_counts().head(10).index\n",
+    "top_genres\n",
+    "\n",
+    "plt.Figure(figsize=(12,6))\n",
+    "\n",
+    "sns.boxplot(data = df_exp[df_exp[\"genres\"].isin(top_genres)],\n",
+    "            x = \"genres\",\n",
+    "            y = \"total\")\n",
+    "\n",
+    "plt.title(\"Distribución de la popularidad por género en Steam\")\n",
+    "plt.yscale(\"log\")\n",
+    "plt.xticks(rotation = 45)\n",
+    "plt.ylabel(\"Número de reseñas\")\n",
+    "plt.xlabel(\"Género\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff92d9c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.violinplot(data = df_exp[df_exp[\"genres\"].isin(top_genres)],\n",
+    "               x = \"genres\",\n",
+    "               y = \"total\")\n",
+    "\n",
+    "plt.title(\"Distribución de la popularidad por género en Steam\")\n",
+    "plt.yscale(\"log\")\n",
+    "plt.xticks(rotation = 45)\n",
+    "plt.ylabel(\"Número de reseñas\")\n",
+    "plt.xlabel(\"Género\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61ff7b2b",
+   "metadata": {},
+   "source": [
+    "En ambos gráficos se obtienen las mismas conclusiones. La media del número de reseñas a lo largo de los distintos géneros no parece variar demasiado, además dentro de cada género la distribución sigue siendo de cola larga."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7010929",
+   "metadata": {},
+   "source": [
+    "##### Histograma del número de reseñas para los géneros más populares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82317925",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(2,5, figsize = (15,8))\n",
+    "\n",
+    "# Para convertir en lista que se pueda recorrer con 1 sólo índice\n",
+    "ax = ax.flatten()\n",
+    "\n",
+    "for i,genre in enumerate(top_genres):\n",
+    "    data = df_exp[df_exp[\"genres\"] == genre].get(\"total\")\n",
+    "\n",
+    "    ax[i].hist(data, bins=30)\n",
+    "    ax[i].set_title(genre)\n",
+    "    ax[i].set_yscale(\"log\")\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da987594",
+   "metadata": {},
+   "source": [
+    "Se puede observar como todos los géneros tienen distribuciones muy similares, con gran concentracion en los números de reseñas bajos y una presencia notable de \"outliers\". Todo esto es coherente con la lógica del mercado de videojuegos ya que por cada género siempre hay algunos títulos que suelen destacar masivamente respecto a los demás; mientras que el grueso se suele localizar en números de reseñas bajos."
    ]
   },
   {
@@ -190,7 +389,7 @@
    "id": "4110945f",
    "metadata": {},
    "source": [
-    "Conclusiones:"
+    "#### Conclusiones:"
    ]
   },
   {
@@ -198,7 +397,7 @@
    "id": "89641cd4",
    "metadata": {},
    "source": [
-    "Se aprecia que la distribución era la que esperábamos, una de cola larga con gran concentración de juegos alrededorde números de reseñas bajos y solo unos pocos con muchas reseñas. Además parece que la distribución se mantiene en las distintas categorías (los juegos gratuitos presentan la misma distribución que los no gratuitos)."
+    "Se aprecia que la distribución era la que esperábamos, una de cola larga con gran concentración de juegos alrededorde números de reseñas bajos y solo unos pocos con muchas reseñas. Además parece que la distribución se mantiene en las distintas categorías (los juegos gratuitos presentan la misma distribución que los no gratuitos) y géneros."
    ]
   },
   {
