--- a/src/2_Analisis/Analisis_distribucion_precios.ipynb
+++ b/src/2_Analisis/Analisis_distribucion_precios.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "39a80cc2",
    "metadata": {},
    "outputs": [],
@@ -43,10 +43,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3f72837d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "No se encuentra la ruta: C:\\UNIVERSIDAD\\PD1\\proyecto\\c2526-R4\\data\\info_steam_games_6.json.gz",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      6\u001b[39m ruta = Path(data_dir / \u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33minfo_steam_games_6.json.gz\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ruta.exists():\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m'\u001b[39m\u001b[33mNo se encuentra la ruta: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mruta\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m)\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m gzip.open(ruta, \u001b[33m'\u001b[39m\u001b[33mrt\u001b[39m\u001b[33m'\u001b[39m, encoding=\u001b[33m'\u001b[39m\u001b[33mUTF-8\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m     12\u001b[39m     data = json.load(f)\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: No se encuentra la ruta: C:\\UNIVERSIDAD\\PD1\\proyecto\\c2526-R4\\data\\info_steam_games_6.json.gz"
+     ]
+    }
+   ],
    "source": [
     "base_dir = Path().resolve().parents[1] # Nos situamos en la carpeta del proyecto\n",
     "data_dir = base_dir / 'data' # cd data\n",
@@ -86,7 +98,17 @@
    "execution_count": null,
    "id": "d4870aa3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# Cada clave de appdetails se vuelve una columna del DataFrame\n",
     "df = df.join(df['appdetails'].apply(pd.Series))\n",
@@ -108,7 +130,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "def get_genres(x):\n",
     "    if not isinstance(x, dict):\n",
@@ -129,10 +161,18 @@
     "def price_range(x):\n",
     "    if x == 0:\n",
     "        return 'Free'\n",
-    "    elif x > 0 and x < 20:\n",
-    "        return '[0.01,19.99]'\n",
-    "    elif x >= 20 and x < 40:\n",
-    "        return '[20,39.99]'\n",
+    "    elif x > 0 and x < 5:\n",
+    "        return '[0.01,4.99]'\n",
+    "    elif x >= 5 and x < 10:\n",
+    "        return '[5.00,9.99]'\n",
+    "    elif x >= 10 and x < 15:\n",
+    "        return '[10.00,15.99]'\n",
+    "    elif x >= 15 and x < 20:\n",
+    "        return '[15.00,19.99]'\n",
+    "    elif x >= 20 and x < 30:\n",
+    "        return '[20.00,29.99]'\n",
+    "    elif x >= 30 and x < 40:\n",
+    "        return'[30.00,39.99]'\n",
     "    elif x >= 40:\n",
     "        return '>40'\n",
     "\n",
@@ -156,7 +196,17 @@
    "execution_count": null,
    "id": "a1cc34f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "df['price_overview'].describe()"
    ]
@@ -198,7 +248,17 @@
    "execution_count": null,
    "id": "0e55337e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "plt.figure(figsize=(9,9))\n",
     "plt.pie(x=df['price_range'].value_counts(),  autopct='%1.1f%%')\n",
@@ -219,7 +279,17 @@
    "execution_count": null,
    "id": "00857af3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "bins_range = np.arange(df['price_overview'].min(), df['price_overview'].max() + 5, 5) # Bins van de 5 en 5 \n",
     "\n",
@@ -256,7 +326,17 @@
    "execution_count": null,
    "id": "7b9b66ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# Por cada genero del array de 'genres', crea una fila por cada miembro del array\n",
     "df_exploded = df.explode('genres')\n",
@@ -298,7 +378,17 @@
    "execution_count": null,
    "id": "03adc662",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# Agrupamos los juegos en una tabla por género y precio\n",
     "genre_price_counts = df_exploded.groupby(['genres', 'price_range']).size().unstack(fill_value=0)\n",
