Modificada la función project_root() en utils/config.py para generalizarla

--- a/src/2_Analisis/Analisis_distribucion_popularidad.ipynb
+++ b/src/2_Analisis/Analisis_distribucion_popularidad.ipynb
@@ -411,7 +411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "steampredictor",
+   "display_name": "steampredictor (3.12.12)",
    "language": "python",
    "name": "python3"
   },
