Modificado notebook de análisis de la popularidad para leer el parquet proveniente de games_info_tranformacion.py. Añadida biblioteca pyarrow para poder guardar un dataframe a parquet.

--- a/src/3_Analisis/Analisis_distribucion_popularidad.ipynb
+++ b/src/3_Analisis/Analisis_distribucion_popularidad.ipynb
@@ -33,181 +33,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "dfa03757",
-   "metadata": {},
-   "source": [
-    "## Carga de datos a DataFrame:\n",
-    "Es necesario leer el json y crear un dataset a patir de la lista asociada a la clave `data`."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad34db4a",
+   "id": "f416cac0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = Path().resolve().parents[1]\n",
-    "data_dir = base_dir / \"data\"\n",
-    "\n",
-    "# No usa variable de entorno pues la ruta será el archivo final con todos los juegos,\n",
-    "# no partes individuales de cada identificador\n",
-    "ruta = Path(data_dir / f\"info_steam_games_3.json.gz\")\n",
-    "\n",
-    "if not ruta.exists():\n",
-    "    raise FileNotFoundError(f\"No se encuentra la ruta: {ruta}\")\n",
-    "\n",
-    "with gzip.open(data_dir / \"info_steam_games_3.json.gz\", \"rt\", encoding=\"UTF-8\") as f:\n",
-    "    data = json.load(f)\n",
-    "    \n",
-    "df = pd.DataFrame(data['data'])\n",
-    "\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8de364d9",
-   "metadata": {},
-   "source": [
-    "## Procesado del DataFrame"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a351b348",
-   "metadata": {},
-   "source": [
-    "Se crea una columna nueva del dataframe por cada clave dentro de `appdetails`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b9540d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.join(df[\"appdetails\"].apply(pd.Series))\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e0a86b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_name(x):\n",
-    "    if isinstance(x,dict):\n",
-    "        return x.get(\"name\")\n",
-    "    else:\n",
-    "        return None\n",
-    "\n",
-    "def get_genres(x):\n",
-    "    if not isinstance(x, dict):\n",
-    "        return []\n",
-    "    genres = x.get('genres', [])\n",
-    "    if not isinstance(genres, list):\n",
-    "        return []\n",
-    "    return [g.get('description') for g in genres if isinstance(g, dict)]\n",
-    "\n",
-    "def get_categories(x):\n",
-    "    if not isinstance(x,dict):\n",
-    "        return []\n",
-    "    categories = x.get(\"categories\", [])\n",
-    "    if not isinstance(categories, list):\n",
-    "        return []\n",
-    "    return [c.get(\"description\") for c in categories if isinstance(c, dict)]\n",
-    "\n",
-    "def is_free(x):\n",
-    "    if not isinstance(x,dict):\n",
-    "        return []\n",
-    "    price_ov = x.get(\"price_overview\", [])\n",
-    "    if not isinstance(price_ov, dict):\n",
-    "        return []\n",
-    "    return price_ov.get(\"initial\") == 0\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e064d358",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"name\"] = df[\"appdetails\"].apply(lambda x : get_name(x))\n",
-    "df[\"free\"] = df[\"appdetails\"].apply(lambda x: is_free(x))\n",
-    "df[\"categories\"] = df[\"appdetails\"].apply(lambda x: get_categories(x))\n",
-    "df[\"genres\"] = df[\"appdetails\"].apply(lambda x: get_genres(x))\n",
-    "df.drop(columns=[\"appdetails\"], inplace=True,errors=\"ignore\")\n",
-    "\n",
-    "df\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f9f15289",
-   "metadata": {},
-   "source": [
-    "Creación de las columnas `recomendaciones_positivas` y `recomendaciones_negativas`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4b639d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"recomendaciones_positivas\"] = df[\"appreviewhistogram\"].apply(lambda x: x.get(\"rollups\").get(\"recommendations_up\") if isinstance(x, dict) & isinstance(x.get(\"rollups\"), dict) else None)\n",
-    "df[\"recomendaciones_negativas\"] = df[\"appreviewhistogram\"].apply(lambda x: x.get(\"rollups\").get(\"recommendations_down\") if isinstance(x, dict) & isinstance(x.get(\"rollups\"), dict) else None)\n",
-    "df.drop(columns=[\"appreviewhistogram\"], inplace = True, errors=\"ignore\")\n",
-    "\n",
-    "df.dropna(subset=[\"recomendaciones_positivas\",\"recomendaciones_negativas\"],inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e1824173",
-   "metadata": {},
-   "source": [
-    "Se comprueba que no hay nulos en ninguna de las 2 columnas creadas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8368b6d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"Nulos en columna recomendaciones positivas: {df[\"recomendaciones_negativas\"].isna().sum()}, Nulos en columna recomendaciones negativas: {df[\"recomendaciones_positivas\"].isna().sum()}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e16c9ee9",
-   "metadata": {},
-   "source": [
-    "Por último se ordena el dataset por el número de reseñas totales"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83704f64",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"total\"] = df[\"recomendaciones_positivas\"] + df[\"recomendaciones_negativas\"]\n",
-    "\n",
-    "df.sort_values(by=\"total\",ascending=False, inplace=True)\n",
-    "\n",
-    "df.head(n=20)"
+    "base_dir_path =  Path().resolve().parents[1]\n",
+    "df = pd.read_parquet(base_dir_path / \"data/processed/games_info.parquet\")"
    ]
   },
   {
@@ -233,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(x=df[\"total\"], bins=100)\n",
+    "plt.hist(x=df[\"recomendaciones_totales\"], bins=100)\n",
     "plt.yscale(\"log\")\n",
     "plt.xlabel(\"Numero de reseñas\")\n",
     "plt.ylabel(\"Número de juegos (log)\")\n",
@@ -257,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.histogram(df, x = \"total\",title=\"Distribución de popularidad (número de reseñas en el primer mes)\",\n",
+    "fig = px.histogram(df, x = \"recomendaciones_totales\",title=\"Distribución de popularidad (número de reseñas en el primer mes)\",\n",
     "                   labels={\"x\":\"Número de reseñas\", \"y\":\"Número de juegos (log)\"},nbins= 100,color = \"free\", opacity= 0.9,facet_col=\"free\")\n",
     "fig.update_yaxes(type=\"log\")\n",
     "\n",
@@ -271,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Número de juegos con menos de 50 reseñas en el primer mes: {df[df[\"total\"] < 50].shape[0]}\")"
+    "print(f\"Número de juegos con menos de 50 reseñas en el primer mes: {df[df[\"recomendaciones_totales\"] < 50].shape[0]}\")"
    ]
   },
   {
@@ -307,7 +140,7 @@
     "\n",
     "sns.boxplot(data = df_exp[df_exp[\"genres\"].isin(top_genres)],\n",
     "            x = \"genres\",\n",
-    "            y = \"total\")\n",
+    "            y = \"recomendaciones_totales\")\n",
     "\n",
     "plt.title(\"Distribución de la popularidad por género en Steam\")\n",
     "plt.yscale(\"log\")\n",
@@ -327,7 +160,7 @@
    "source": [
     "sns.violinplot(data = df_exp[df_exp[\"genres\"].isin(top_genres)],\n",
     "               x = \"genres\",\n",
-    "               y = \"total\")\n",
+    "               y = \"recomendaciones_totales\")\n",
     "\n",
     "plt.title(\"Distribución de la popularidad por género en Steam\")\n",
     "plt.yscale(\"log\")\n",
@@ -366,7 +199,7 @@
     "ax = ax.flatten()\n",
     "\n",
     "for i,genre in enumerate(top_genres):\n",
-    "    data = df_exp[df_exp[\"genres\"] == genre].get(\"total\")\n",
+    "    data = df_exp[df_exp[\"genres\"] == genre].get(\"recomendaciones_totales\")\n",
     "\n",
     "    ax[i].hist(data, bins=30)\n",
     "    ax[i].set_title(genre)\n",
@@ -399,19 +232,11 @@
    "source": [
     "Se aprecia que la distribución era la que esperábamos, una de cola larga con gran concentración de juegos alrededorde números de reseñas bajos y solo unos pocos con muchas reseñas. Además parece que la distribución se mantiene en las distintas categorías (los juegos gratuitos presentan la misma distribución que los no gratuitos) y géneros."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4a2ad495",
-   "metadata": {},
-   "source": [
-    "Se puede comprobar si la distribución se mantiene a lo largo de distintas categorías diferentes. -> COMPLETAR"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "steampredictor (3.12.12)",
+   "display_name": "steampredictor",
    "language": "python",
    "name": "python3"
   },
