Añadido notebook de transformación de youtube_statistics.jsonl.gz a pandas df con PCA

--- a/src/3_Analisis/Analisis_distribucion_precios.ipynb
+++ b/src/3_Analisis/Analisis_distribucion_precios.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet('../../data/games_info.parquet')\n",
+    "df = pd.read_parquet('../../data/processed/games_info.parquet')\n",
     "df.head(5)"
    ]
   },
@@ -108,7 +108,7 @@
     "\n",
     "plt.figure(figsize=(15,15))\n",
     "plt.hist(x=df['price_overview'], log=True, bins= bins_range)\n",
-    "plt.xticks(np.arange(0, df['price_overview'].max() + 5, 20))\n",
+    "plt.xticks(np.arange(0, df['price_overview'].max() + 5, 50))\n",
     "plt.show()"
    ]
   },
@@ -142,21 +142,6 @@
    "outputs": [],
    "source": [
     "df['price_range'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fcbdec5f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[\"genres\"] = df[\"genres\"].apply(lambda x: x.replace(\"[\", \"\"))\n",
-    "df[\"genres\"] = df[\"genres\"].apply(lambda x: x.replace(\"]\", \"\"))\n",
-    "df[\"genres\"] = df[\"genres\"].apply(lambda x: x.replace(\"\\n\", \"\"))\n",
-    "df[\"genres\"] = df[\"genres\"].apply(lambda x: x.replace(\",\", \"\"))\n",
-    "df[\"genres\"] = df[\"genres\"].apply(lambda x: x.split(\" \"))\n",
-    "df.head(5)"
    ]
   },
   {
