Eliminado el sleep en el script D (parece ser que no es necesario, se ha probado sobre la parte de Zhixian y no ha dado ningún error). Ahora en el request de get_resenyas se toman las últimas reviews. Pequeños cambios en los paths en los notebooks de analisis

--- a/src/3_Analisis/Analisis_distribucion_precios.ipynb
+++ b/src/3_Analisis/Analisis_distribucion_precios.ipynb
@@ -16,10 +16,7 @@
    "outputs": [],
    "source": [
     "# Módulos\n",
-    "\n",
     "import pandas as pd\n",
-    "import json\n",
-    "import gzip\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from pathlib import Path"
@@ -48,7 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet('../../data/processed/games_info.parquet')\n",
+    "base_dir_path =  Path().resolve().parents[1]\n",
+    "df = pd.read_parquet(base_dir_path / \"data/processed/games_info.parquet\")\n",
     "df.head(5)"
    ]
   },
