Modificación de los comentarios del notebook de análisis de la distribución

--- a/src/3_Analisis/Analisis_distribucion_popularidad.ipynb
+++ b/src/3_Analisis/Analisis_distribucion_popularidad.ipynb
@@ -75,6 +75,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "32b6d5a1",
+   "metadata": {},
+   "source": [
+    "Como era esperado, la distribución sigue una cola larga, con una gran concentración de juegos en números de reseñas bajos y tan sólo una pequeño porcentaje de outliers.\n",
+    "\n",
+    "Se vuelve necesario comprobar si efectivamente esta distribución se mantiene a lo largo de distintas categorías o géneros, o existen excepciones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6fd6033d",
    "metadata": {},
    "source": [
@@ -93,6 +103,14 @@
     "fig.update_yaxes(type=\"log\")\n",
     "\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1a04301",
+   "metadata": {},
+   "source": [
+    "En una primera aproximación se observa que el precio no influye en la distribución puesto que ambos gráficos son muy similares, con muchos juegos en los número de reseñas bajos. Lá unica diferencia entre ambos gráficos sería que el número de juegos gratuitos es notablemente inferior al número de juegos no gratuitos (esto se observa con mayor precisión en el análisis de la distribución de precios)"
    ]
   },
   {
@@ -173,7 +191,9 @@
    "id": "61ff7b2b",
    "metadata": {},
    "source": [
-    "En ambos gráficos se obtienen las mismas conclusiones. La media del número de reseñas a lo largo de los distintos géneros no parece variar demasiado, además dentro de cada género la distribución sigue siendo de cola larga."
+    "En ambos gráficos se obtienen las mismas conclusiones. Lo más destacable es que casi todos los géneros tienen una media del número de reseñas muy similar, colocándose justo debajo de las 10 reseñas, y siendo el género \"Free To Play\" el que destaca ligeramente por encima del resto. Esto es algo lógico, pues si un juego es gratuito, más usuarios tienen acceso a él, aumentando el número de reseñas.\n",
+    "\n",
+    "Por lo demás no hay grandes cambios entre género, todos presentan la misma distribución y por tanto en todos los géneros aparecen gran cantidad de datos que son considerados como \"outliers\"."
    ]
   },
   {
@@ -212,7 +232,7 @@
    "id": "da987594",
    "metadata": {},
    "source": [
-    "Se puede observar como todos los géneros tienen distribuciones muy similares, con gran concentracion en los números de reseñas bajos y una presencia notable de \"outliers\". Todo esto es coherente con la lógica del mercado de videojuegos ya que por cada género siempre hay algunos títulos que suelen destacar masivamente respecto a los demás; mientras que el grueso se suele localizar en números de reseñas bajos."
+    "En esta comparativa se puede ver que efectivamente las distribuciones entre distintos géneros son muy similares y no existen grandes diferencias."
    ]
   },
   {
@@ -228,7 +248,7 @@
    "id": "89641cd4",
    "metadata": {},
    "source": [
-    "Se aprecia que la distribución era la que esperábamos, una de cola larga con gran concentración de juegos alrededorde números de reseñas bajos y solo unos pocos con muchas reseñas. Además parece que la distribución se mantiene en las distintas categorías (los juegos gratuitos presentan la misma distribución que los no gratuitos) y géneros."
+    "Se aprecia que la distribución era la que esperábamos, una de cola larga con gran concentración de juegos alrededor de números de reseñas bajos y solo unos pocos con muchas reseñas. Además también se comprueba que la distribución se mantiene tanto para juegos gratuitos como no gratuitos, así como para los géneros más populares."
    ]
   }
  ],
